--- a/project/SPTarkov.Launcher/Components/Settings/AdvancedPanelComponent.razor
+++ b/project/SPTarkov.Launcher/Components/Settings/AdvancedPanelComponent.razor
@@ -1,5 +1,5 @@
-﻿@inject ConfigHelper _configHelper
-@inject NavigationHelper _navigationHelper
+﻿@inject ConfigHelper ConfigHelper
+@inject StateHelper StateHelper
 
 <MudItem sm="12">
     <MudPaper Class="pa-5 ml-1 gap-2 d-flex flex-column setting-on-hover-container mud-background-gray border-2 border-solid mud-border-lines-default" Elevation="3">
@@ -15,21 +15,21 @@
 
     protected override void OnInitialized()
     {
-        advancedUserSwitch = _configHelper.GetConfig().AdvancedUser;
-        showBackgroundSwitch = _configHelper.GetConfig().UseBackground;
+        advancedUserSwitch = ConfigHelper.GetConfig().AdvancedUser;
+        showBackgroundSwitch = ConfigHelper.GetConfig().UseBackground;
         base.OnInitialized();
     }
 
     private async Task SetAdvUser()
     {
         advancedUserSwitch = !advancedUserSwitch;
-        _configHelper.SetAdvancedUser(advancedUserSwitch);
+        ConfigHelper.SetAdvancedUser(advancedUserSwitch);
     }
 
     private async Task SetBackgroundUsage()
     {
         showBackgroundSwitch = !showBackgroundSwitch;
-        _navigationHelper.SetBackground(showBackgroundSwitch);
-        _configHelper.SetUseBackground(showBackgroundSwitch);
+        StateHelper.SetBackground(showBackgroundSwitch);
+        ConfigHelper.SetUseBackground(showBackgroundSwitch);
     }
 }
